--- a/code/pre_process.ipynb
+++ b/code/pre_process.ipynb
@@ -256,24 +256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "      bldg_sf  total_baths  good_ament_ct  btm_5_nbrhd  newHome  \\\nId                                                                \n1076     2540          1.5              1            0        0   \n438      1788          1.0              0            0        0   \n1386     1950          2.0              1            1        0   \n1437     1728          1.0              0            0        0   \n777      3228          2.0              3            0        1   \n\n      neg_ovrll_cond  adj_ovr_qual  adj_lot_area  bad_ament_ct  abnormal_sale  \\\nId                                                                              \n1076               0             4         12165             0              0   \n438                0             3          4991             1              0   \n1386               0             1          4544             1              0   \n1437               0             1          8136             1              0   \n777                0             4          9393             1              0   \n\n      outside_sf  two_plus_cr_garg  sgl_famly_hm  bedroomsabvgr  saleprice  \nId                                                                          \n1076           0                 0             0              3     219500  \n438          105                 0             0              2     119000  \n1386          96                 0             0              3     125500  \n1437           0                 1             0              3     120500  \n777          203                 1             0              3     221500  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bldg_sf</th>\n      <th>total_baths</th>\n      <th>good_ament_ct</th>\n      <th>btm_5_nbrhd</th>\n      <th>newHome</th>\n      <th>neg_ovrll_cond</th>\n      <th>adj_ovr_qual</th>\n      <th>adj_lot_area</th>\n      <th>bad_ament_ct</th>\n      <th>abnormal_sale</th>\n      <th>outside_sf</th>\n      <th>two_plus_cr_garg</th>\n      <th>sgl_famly_hm</th>\n      <th>bedroomsabvgr</th>\n      <th>saleprice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1076</th>\n      <td>2540</td>\n      <td>1.5</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>12165</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>219500</td>\n    </tr>\n    <tr>\n      <th>438</th>\n      <td>1788</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>4991</td>\n      <td>1</td>\n      <td>0</td>\n      <td>105</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>119000</td>\n    </tr>\n    <tr>\n      <th>1386</th>\n      <td>1950</td>\n      <td>2.0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>4544</td>\n      <td>1</td>\n      <td>0</td>\n      <td>96</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>125500</td>\n    </tr>\n    <tr>\n      <th>1437</th>\n      <td>1728</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>8136</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>3</td>\n      <td>120500</td>\n    </tr>\n    <tr>\n      <th>777</th>\n      <td>3228</td>\n      <td>2.0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>4</td>\n      <td>9393</td>\n      <td>1</td>\n      <td>0</td>\n      <td>203</td>\n      <td>1</td>\n      <td>0</td>\n      <td>3</td>\n      <td>221500</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      bldg_sf  total_baths  good_ament_ct  btm_5_nbrhd  newHome  \\\nId                                                                \n1037     3240          3.0              5            0        1   \n1323     2673          3.5              4            0        0   \n155      2400          1.0              0            1        0   \n463      1728          1.0              0            0        0   \n448      2816          2.5              2            0        0   \n\n      neg_ovrll_cond  adj_ovr_qual  adj_lot_area  bad_ament_ct  abnormal_sale  \\\nId                                                                              \n1037               0             6         11050             0              0   \n1323               0             4          8846             0              0   \n155                0             3          9912             2              0   \n463                0             2          7181             0              0   \n448                0             4         10169             0              0   \n\n      outside_sf  two_plus_cr_garg  sgl_famly_hm  top_3_nbrhd  lotfrontage  \\\nId                                                                           \n1037         228                 1             0            0         89.0   \n1323         279                 1             0            1        107.0   \n155          228                 0             0            0         84.0   \n463          236                 0             0            0         60.0   \n448           89                 1             0            0          0.0   \n\n      garagecars  bedroomsabvgr  saleprice  \nId                                          \n1037           3              2     315500  \n1323           2              3     190000  \n155            1              4     125000  \n463            1              3      62383  \n448            2              4     199900  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bldg_sf</th>\n      <th>total_baths</th>\n      <th>good_ament_ct</th>\n      <th>btm_5_nbrhd</th>\n      <th>newHome</th>\n      <th>neg_ovrll_cond</th>\n      <th>adj_ovr_qual</th>\n      <th>adj_lot_area</th>\n      <th>bad_ament_ct</th>\n      <th>abnormal_sale</th>\n      <th>outside_sf</th>\n      <th>two_plus_cr_garg</th>\n      <th>sgl_famly_hm</th>\n      <th>top_3_nbrhd</th>\n      <th>lotfrontage</th>\n      <th>garagecars</th>\n      <th>bedroomsabvgr</th>\n      <th>saleprice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1037</th>\n      <td>3240</td>\n      <td>3.0</td>\n      <td>5</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>6</td>\n      <td>11050</td>\n      <td>0</td>\n      <td>0</td>\n      <td>228</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>89.0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>315500</td>\n    </tr>\n    <tr>\n      <th>1323</th>\n      <td>2673</td>\n      <td>3.5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>8846</td>\n      <td>0</td>\n      <td>0</td>\n      <td>279</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>107.0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>190000</td>\n    </tr>\n    <tr>\n      <th>155</th>\n      <td>2400</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>9912</td>\n      <td>2</td>\n      <td>0</td>\n      <td>228</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>84.0</td>\n      <td>1</td>\n      <td>4</td>\n      <td>125000</td>\n    </tr>\n    <tr>\n      <th>463</th>\n      <td>1728</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>7181</td>\n      <td>0</td>\n      <td>0</td>\n      <td>236</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>60.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>62383</td>\n    </tr>\n    <tr>\n      <th>448</th>\n      <td>2816</td>\n      <td>2.5</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>10169</td>\n      <td>0</td>\n      <td>0</td>\n      <td>89</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>199900</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 11
+     "execution_count": 26
     }
    ],
    "source": [
     "# specifying the target and explanatory variables \n",
     "list_of_features = [\n",
     "    bldg_sqft, total_baths, good_ament_ct, btm_5_nbrhd, newHome, neg_ovrll_cond, adj_ovr_qual, adj_lot_area,\n",
-    "    bad_ament_ct, abnormal_sale, outside_sf, two_plus_cr_garg, sgl_famly_hm, \n",
-    "    cleaned_df[[\"bedroomabvgr\", \"saleprice\"]]\n",
+    "    bad_ament_ct, abnormal_sale, outside_sf, two_plus_cr_garg, sgl_famly_hm, top_3_nbrhd, \n",
+    "    cleaned_df[[\"lotfrontage\", \"garagecars\", \"bedroomabvgr\", \"saleprice\"]]\n",
     "]\n",
     "\n",
     "features_pls_trgt = pd.concat(list_of_features, axis=\"columns\")\n",
@@ -281,8 +281,8 @@
     "# specifying column name for items inputted as Series\n",
     "features_pls_trgt.columns = [\n",
     "    \"bldg_sf\", \"total_baths\", \"good_ament_ct\", \"btm_5_nbrhd\", \"newHome\",\"neg_ovrll_cond\", \"adj_ovr_qual\", \n",
-    "    \"adj_lot_area\", \"bad_ament_ct\", \"abnormal_sale\", \"outside_sf\", \"two_plus_cr_garg\",\"sgl_famly_hm\",\n",
-    "    \"bedroomsabvgr\", \"saleprice\",\n",
+    "    \"adj_lot_area\", \"bad_ament_ct\", \"abnormal_sale\", \"outside_sf\", \"two_plus_cr_garg\",\"sgl_famly_hm\", \"top_3_nbrhd\",\n",
+    "    \"lotfrontage\", \"garagecars\", \"bedroomsabvgr\", \"saleprice\",\n",
     "]\n",
     "\n",
     "features_pls_trgt.sample(5)"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# creating field that is the log of sale price\n",
@@ -318,9 +318,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
-   "source": [],
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "(1458, 19)\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "data": {
+      "text/plain": "Index(['bldg_sf', 'total_baths', 'good_ament_ct', 'btm_5_nbrhd', 'newHome',\n       'neg_ovrll_cond', 'adj_ovr_qual', 'adj_lot_area', 'bad_ament_ct',\n       'abnormal_sale', 'outside_sf', 'two_plus_cr_garg', 'sgl_famly_hm',\n       'top_3_nbrhd', 'lotfrontage', 'garagecars', 'bedroomsabvgr',\n       'saleprice', 'log_saleprice'],\n      dtype='object')"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "print(features_pls_trgt.shape)\n",
+    "\n",
+    "features_pls_trgt.columns"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
