--- a/code/pre_process.ipynb
+++ b/code/pre_process.ipynb
@@ -256,23 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
-      "text/plain": "      bldg_sf  total_baths  good_ament_ct  btm_5_nbrhd  newHome  \\\nId                                                                \n1037     3240          3.0              5            0        1   \n1323     2673          3.5              4            0        0   \n155      2400          1.0              0            1        0   \n463      1728          1.0              0            0        0   \n448      2816          2.5              2            0        0   \n\n      neg_ovrll_cond  adj_ovr_qual  adj_lot_area  bad_ament_ct  abnormal_sale  \\\nId                                                                              \n1037               0             6         11050             0              0   \n1323               0             4          8846             0              0   \n155                0             3          9912             2              0   \n463                0             2          7181             0              0   \n448                0             4         10169             0              0   \n\n      outside_sf  two_plus_cr_garg  sgl_famly_hm  top_3_nbrhd  lotfrontage  \\\nId                                                                           \n1037         228                 1             0            0         89.0   \n1323         279                 1             0            1        107.0   \n155          228                 0             0            0         84.0   \n463          236                 0             0            0         60.0   \n448           89                 1             0            0          0.0   \n\n      garagecars  bedroomsabvgr  saleprice  \nId                                          \n1037           3              2     315500  \n1323           2              3     190000  \n155            1              4     125000  \n463            1              3      62383  \n448            2              4     199900  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bldg_sf</th>\n      <th>total_baths</th>\n      <th>good_ament_ct</th>\n      <th>btm_5_nbrhd</th>\n      <th>newHome</th>\n      <th>neg_ovrll_cond</th>\n      <th>adj_ovr_qual</th>\n      <th>adj_lot_area</th>\n      <th>bad_ament_ct</th>\n      <th>abnormal_sale</th>\n      <th>outside_sf</th>\n      <th>two_plus_cr_garg</th>\n      <th>sgl_famly_hm</th>\n      <th>top_3_nbrhd</th>\n      <th>lotfrontage</th>\n      <th>garagecars</th>\n      <th>bedroomsabvgr</th>\n      <th>saleprice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1037</th>\n      <td>3240</td>\n      <td>3.0</td>\n      <td>5</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>6</td>\n      <td>11050</td>\n      <td>0</td>\n      <td>0</td>\n      <td>228</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>89.0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>315500</td>\n    </tr>\n    <tr>\n      <th>1323</th>\n      <td>2673</td>\n      <td>3.5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>8846</td>\n      <td>0</td>\n      <td>0</td>\n      <td>279</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>107.0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>190000</td>\n    </tr>\n    <tr>\n      <th>155</th>\n      <td>2400</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>9912</td>\n      <td>2</td>\n      <td>0</td>\n      <td>228</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>84.0</td>\n      <td>1</td>\n      <td>4</td>\n      <td>125000</td>\n    </tr>\n    <tr>\n      <th>463</th>\n      <td>1728</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>7181</td>\n      <td>0</td>\n      <td>0</td>\n      <td>236</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>60.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>62383</td>\n    </tr>\n    <tr>\n      <th>448</th>\n      <td>2816</td>\n      <td>2.5</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>10169</td>\n      <td>0</td>\n      <td>0</td>\n      <td>89</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>199900</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "     bldg_sf  total_baths  good_ament_ct  btm_5_nbrhd  newHome  \\\nId                                                               \n734     2008          2.0              2            0        0   \n833     2770          3.5              4            0        0   \n180     1936          1.0              0            1        0   \n423     1976          1.0              1            0        0   \n577     2338          2.5              1            0        0   \n\n     neg_ovrll_cond  adj_ovr_qual  adj_lot_area  bad_ament_ct  abnormal_sale  \\\nId                                                                             \n734               0             2          8691             0              0   \n833               0             4          8376             0              0   \n180               0             2          7368             1              0   \n423               0             2         20762             2              0   \n577               0             4          5365             0              0   \n\n     outside_sf  two_plus_cr_garg  sgl_famly_hm  top_3_nbrhd  homeage  \\\nId                                                                      \n734         165                 0             0            0       48   \n833         231                 1             0            0        7   \n180         184                 1             0            0       84   \n423           0                 1             0            0       54   \n577          50                 0             0            0       81   \n\n     remodelage  lotfrontage  garagecars  bedroomsabvgr  saleprice  \nId                                                                  \n734          26         80.0           1              3     131400  \n833           7         44.0           2              3     237000  \n180           1         60.0           2              2     100000  \n423          54        100.0           2              2     113000  \n577          59         52.0           1              3     145000  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bldg_sf</th>\n      <th>total_baths</th>\n      <th>good_ament_ct</th>\n      <th>btm_5_nbrhd</th>\n      <th>newHome</th>\n      <th>neg_ovrll_cond</th>\n      <th>adj_ovr_qual</th>\n      <th>adj_lot_area</th>\n      <th>bad_ament_ct</th>\n      <th>abnormal_sale</th>\n      <th>outside_sf</th>\n      <th>two_plus_cr_garg</th>\n      <th>sgl_famly_hm</th>\n      <th>top_3_nbrhd</th>\n      <th>homeage</th>\n      <th>remodelage</th>\n      <th>lotfrontage</th>\n      <th>garagecars</th>\n      <th>bedroomsabvgr</th>\n      <th>saleprice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>734</th>\n      <td>2008</td>\n      <td>2.0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>8691</td>\n      <td>0</td>\n      <td>0</td>\n      <td>165</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>48</td>\n      <td>26</td>\n      <td>80.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>131400</td>\n    </tr>\n    <tr>\n      <th>833</th>\n      <td>2770</td>\n      <td>3.5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>8376</td>\n      <td>0</td>\n      <td>0</td>\n      <td>231</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>7</td>\n      <td>7</td>\n      <td>44.0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>237000</td>\n    </tr>\n    <tr>\n      <th>180</th>\n      <td>1936</td>\n      <td>1.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>7368</td>\n      <td>1</td>\n      <td>0</td>\n      <td>184</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>84</td>\n      <td>1</td>\n      <td>60.0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>100000</td>\n    </tr>\n    <tr>\n      <th>423</th>\n      <td>1976</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>20762</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>54</td>\n      <td>54</td>\n      <td>100.0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>113000</td>\n    </tr>\n    <tr>\n      <th>577</th>\n      <td>2338</td>\n      <td>2.5</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>5365</td>\n      <td>0</td>\n      <td>0</td>\n      <td>50</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>81</td>\n      <td>59</td>\n      <td>52.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>145000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 26
+     "execution_count": 29
     }
    ],
    "source": [
     "# specifying the target and explanatory variables \n",
     "list_of_features = [\n",
     "    bldg_sqft, total_baths, good_ament_ct, btm_5_nbrhd, newHome, neg_ovrll_cond, adj_ovr_qual, adj_lot_area,\n",
-    "    bad_ament_ct, abnormal_sale, outside_sf, two_plus_cr_garg, sgl_famly_hm, top_3_nbrhd, \n",
+    "    bad_ament_ct, abnormal_sale, outside_sf, two_plus_cr_garg, sgl_famly_hm, top_3_nbrhd, homeage, remodelage,\n",
     "    cleaned_df[[\"lotfrontage\", \"garagecars\", \"bedroomabvgr\", \"saleprice\"]]\n",
     "]\n",
     "\n",
@@ -282,7 +282,7 @@
     "features_pls_trgt.columns = [\n",
     "    \"bldg_sf\", \"total_baths\", \"good_ament_ct\", \"btm_5_nbrhd\", \"newHome\",\"neg_ovrll_cond\", \"adj_ovr_qual\", \n",
     "    \"adj_lot_area\", \"bad_ament_ct\", \"abnormal_sale\", \"outside_sf\", \"two_plus_cr_garg\",\"sgl_famly_hm\", \"top_3_nbrhd\",\n",
-    "    \"lotfrontage\", \"garagecars\", \"bedroomsabvgr\", \"saleprice\",\n",
+    "    \"homeage\", \"remodelage\", \"lotfrontage\", \"garagecars\", \"bedroomsabvgr\", \"saleprice\",\n",
     "]\n",
     "\n",
     "features_pls_trgt.sample(5)"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "# creating field that is the log of sale price\n",
@@ -318,22 +318,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "(1458, 19)\n"
+      "(1458, 21)\n"
      ],
      "output_type": "stream"
     },
     {
      "data": {
-      "text/plain": "Index(['bldg_sf', 'total_baths', 'good_ament_ct', 'btm_5_nbrhd', 'newHome',\n       'neg_ovrll_cond', 'adj_ovr_qual', 'adj_lot_area', 'bad_ament_ct',\n       'abnormal_sale', 'outside_sf', 'two_plus_cr_garg', 'sgl_famly_hm',\n       'top_3_nbrhd', 'lotfrontage', 'garagecars', 'bedroomsabvgr',\n       'saleprice', 'log_saleprice'],\n      dtype='object')"
+      "text/plain": "Index(['bldg_sf', 'total_baths', 'good_ament_ct', 'btm_5_nbrhd', 'newHome',\n       'neg_ovrll_cond', 'adj_ovr_qual', 'adj_lot_area', 'bad_ament_ct',\n       'abnormal_sale', 'outside_sf', 'two_plus_cr_garg', 'sgl_famly_hm',\n       'top_3_nbrhd', 'homeage', 'remodelage', 'lotfrontage', 'garagecars',\n       'bedroomsabvgr', 'saleprice', 'log_saleprice'],\n      dtype='object')"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 28
+     "execution_count": 31
     }
    ],
    "source": [
