slight update to pre_process and linear_model and first time predictions

--- a/code/pre_process.ipynb
+++ b/code/pre_process.ipynb
@@ -12,10 +12,10 @@
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
@@ -103,10 +103,17 @@
    },
    "outputs": [],
    "source": [
+    "# adjust basement sqft to cap effect of outliers that I have high basement sf but that do not appear to be \n",
+    "# reflected in an increase in price \n",
+    "cleaned_df[\"totalbsmtsf\"] = cleaned_df[\"totalbsmtsf\"].apply(lambda x: 3000 if x > 3000 else x)\n",
+    "\n",
     "# Combined square footage metrics for building sf and outside sf (e.g., porch space)\n",
     "bldg_sqft = cleaned_df[[\"totalbsmtsf\", \"1stflrsf\", \"2ndflrsf\"]].sum(axis = \"columns\")\n",
     "outside_sf = cleaned_df[[\"wooddecksf\", \"openporchsf\", \"3ssnporch\", \"screenporch\", \"enclosedporch\"]].sum(axis=\"columns\")\n",
-    "lot_sf = cleaned_df[\"lotarea\"] - cleaned_df['1stflrsf'] - outside_sf"
+    "lot_sf = cleaned_df[\"lotarea\"] - cleaned_df['1stflrsf'] - outside_sf\n",
+    "lot_sf = lot_sf.apply(lambda x: 12500 if x > 12500 else x)\n",
+    "\n",
+    "# limit lot_sf to maximum of 25,000 sqft, feature does not appear to be valued above this mark."
    ]
   },
   {
@@ -155,7 +162,8 @@
     "# new_home = sold within past 5 years \n",
     "homeage = cleaned_df[\"yrsold\"] - cleaned_df[\"yearbuilt\"]\n",
     "remodelage = cleaned_df[\"yrsold\"] - cleaned_df[\"yearremodadd\"]\n",
-    "newHome = homeage < 5\n",
+    "remodelage = remodelage.apply(lambda x: 0 if abs(x) < 5 else x - 5)\n",
+    "newHome = abs(homeage) < 5 # added to address minor instances where yr sold was earlier than year built/remodeled\n",
     "newHome = newHome.map({False: 0, True: 1})"
    ]
   },
@@ -256,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -267,227 +275,12 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bldg_sf</th>\n",
-       "      <th>total_baths</th>\n",
-       "      <th>good_ament_ct</th>\n",
-       "      <th>btm_5_nbrhd</th>\n",
-       "      <th>newHome</th>\n",
-       "      <th>neg_ovrll_cond</th>\n",
-       "      <th>adj_ovr_qual</th>\n",
-       "      <th>adj_lot_area</th>\n",
-       "      <th>bad_ament_ct</th>\n",
-       "      <th>abnormal_sale</th>\n",
-       "      <th>outside_sf</th>\n",
-       "      <th>two_plus_cr_garg</th>\n",
-       "      <th>sgl_famly_hm</th>\n",
-       "      <th>top_3_nbrhd</th>\n",
-       "      <th>homeage</th>\n",
-       "      <th>remodelage</th>\n",
-       "      <th>lotfrontage</th>\n",
-       "      <th>garagecars</th>\n",
-       "      <th>bedroomsabvgr</th>\n",
-       "      <th>saleprice</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>734</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8691</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48</td>\n",
-       "      <td>26</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>131400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833</th>\n",
-       "      <td>2770</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8376</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>231</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>237000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>1936</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7368</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>184</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>100000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>1976</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20762</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>54</td>\n",
-       "      <td>54</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>577</th>\n",
-       "      <td>2338</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5365</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>81</td>\n",
-       "      <td>59</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>145000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     bldg_sf  total_baths  good_ament_ct  btm_5_nbrhd  newHome  \\\n",
-       "Id                                                               \n",
-       "734     2008          2.0              2            0        0   \n",
-       "833     2770          3.5              4            0        0   \n",
-       "180     1936          1.0              0            1        0   \n",
-       "423     1976          1.0              1            0        0   \n",
-       "577     2338          2.5              1            0        0   \n",
-       "\n",
-       "     neg_ovrll_cond  adj_ovr_qual  adj_lot_area  bad_ament_ct  abnormal_sale  \\\n",
-       "Id                                                                             \n",
-       "734               0             2          8691             0              0   \n",
-       "833               0             4          8376             0              0   \n",
-       "180               0             2          7368             1              0   \n",
-       "423               0             2         20762             2              0   \n",
-       "577               0             4          5365             0              0   \n",
-       "\n",
-       "     outside_sf  two_plus_cr_garg  sgl_famly_hm  top_3_nbrhd  homeage  \\\n",
-       "Id                                                                      \n",
-       "734         165                 0             0            0       48   \n",
-       "833         231                 1             0            0        7   \n",
-       "180         184                 1             0            0       84   \n",
-       "423           0                 1             0            0       54   \n",
-       "577          50                 0             0            0       81   \n",
-       "\n",
-       "     remodelage  lotfrontage  garagecars  bedroomsabvgr  saleprice  \n",
-       "Id                                                                  \n",
-       "734          26         80.0           1              3     131400  \n",
-       "833           7         44.0           2              3     237000  \n",
-       "180           1         60.0           2              2     100000  \n",
-       "423          54        100.0           2              2     113000  \n",
-       "577          59         52.0           1              3     145000  "
-      ]
+      "text/plain": "      bldg_sf  total_baths  good_ament_ct  btm_5_nbrhd  newHome  \\\nId                                                                \n1375     2984          2.5              3            0        1   \n1171     2214          2.0              0            0        0   \n317      3198          3.5              3            0        0   \n1167     3388          2.0              2            0        1   \n143      2295          2.0              0            0        0   \n\n      neg_ovrll_cond  adj_ovr_qual  adj_lot_area  bad_ament_ct  abnormal_sale  \\\nId                                                                              \n1375               0             4          9235             0              0   \n1171               0             3          8559             0              0   \n317                0             4         11369             0              0   \n1167               0             5          8588             1              0   \n143                1             2          7610             1              0   \n\n      outside_sf  two_plus_cr_garg  sgl_famly_hm  top_3_nbrhd  homeage  \\\nId                                                                       \n1375         364                 1             0            0        3   \n1171         203                 0             0            0       31   \n317          483                 1             0            0       29   \n1167         193                 1             0            0        2   \n143            0                 1             0            0       58   \n\n      remodelage  lotfrontage  garagecars  bedroomsabvgr  saleprice  \nId                                                                   \n1375           0         85.0           3              3     250000  \n1171          26         76.0           1              3     171000  \n317           24         94.0           2              4     260000  \n1167           0         64.0           3              3     245350  \n143           53         71.0           2              4     166000  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bldg_sf</th>\n      <th>total_baths</th>\n      <th>good_ament_ct</th>\n      <th>btm_5_nbrhd</th>\n      <th>newHome</th>\n      <th>neg_ovrll_cond</th>\n      <th>adj_ovr_qual</th>\n      <th>adj_lot_area</th>\n      <th>bad_ament_ct</th>\n      <th>abnormal_sale</th>\n      <th>outside_sf</th>\n      <th>two_plus_cr_garg</th>\n      <th>sgl_famly_hm</th>\n      <th>top_3_nbrhd</th>\n      <th>homeage</th>\n      <th>remodelage</th>\n      <th>lotfrontage</th>\n      <th>garagecars</th>\n      <th>bedroomsabvgr</th>\n      <th>saleprice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1375</th>\n      <td>2984</td>\n      <td>2.5</td>\n      <td>3</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>4</td>\n      <td>9235</td>\n      <td>0</td>\n      <td>0</td>\n      <td>364</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>85.0</td>\n      <td>3</td>\n      <td>3</td>\n      <td>250000</td>\n    </tr>\n    <tr>\n      <th>1171</th>\n      <td>2214</td>\n      <td>2.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>8559</td>\n      <td>0</td>\n      <td>0</td>\n      <td>203</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>31</td>\n      <td>26</td>\n      <td>76.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>171000</td>\n    </tr>\n    <tr>\n      <th>317</th>\n      <td>3198</td>\n      <td>3.5</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>11369</td>\n      <td>0</td>\n      <td>0</td>\n      <td>483</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>29</td>\n      <td>24</td>\n      <td>94.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>260000</td>\n    </tr>\n    <tr>\n      <th>1167</th>\n      <td>3388</td>\n      <td>2.0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>5</td>\n      <td>8588</td>\n      <td>1</td>\n      <td>0</td>\n      <td>193</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>64.0</td>\n      <td>3</td>\n      <td>3</td>\n      <td>245350</td>\n    </tr>\n    <tr>\n      <th>143</th>\n      <td>2295</td>\n      <td>2.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>7610</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>58</td>\n      <td>53</td>\n      <td>71.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>166000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 29,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 11
     }
    ],
    "source": [
@@ -512,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -533,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -544,25 +337,18 @@
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "(1458, 21)\n"
-     ]
+     ],
+     "output_type": "stream"
     },
     {
      "data": {
-      "text/plain": [
-       "Index(['bldg_sf', 'total_baths', 'good_ament_ct', 'btm_5_nbrhd', 'newHome',\n",
-       "       'neg_ovrll_cond', 'adj_ovr_qual', 'adj_lot_area', 'bad_ament_ct',\n",
-       "       'abnormal_sale', 'outside_sf', 'two_plus_cr_garg', 'sgl_famly_hm',\n",
-       "       'top_3_nbrhd', 'homeage', 'remodelage', 'lotfrontage', 'garagecars',\n",
-       "       'bedroomsabvgr', 'saleprice', 'log_saleprice'],\n",
-       "      dtype='object')"
-      ]
+      "text/plain": "Index(['bldg_sf', 'total_baths', 'good_ament_ct', 'btm_5_nbrhd', 'newHome',\n       'neg_ovrll_cond', 'adj_ovr_qual', 'adj_lot_area', 'bad_ament_ct',\n       'abnormal_sale', 'outside_sf', 'two_plus_cr_garg', 'sgl_famly_hm',\n       'top_3_nbrhd', 'homeage', 'remodelage', 'lotfrontage', 'garagecars',\n       'bedroomsabvgr', 'saleprice', 'log_saleprice'],\n      dtype='object')"
      },
-     "execution_count": 31,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 13
     }
    ],
    "source": [
@@ -610,10 +396,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
