set jupytext for EDA file

--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -525,9 +525,15 @@
     "        data[col] = data[col].fillna(\"None\")\n",
     "\n",
     "        print(\"%s now has %d  NaN\" % (col, np.sum(data[col].isnull())))\n",
-    "        print(\"-\" * 50 + \"\\n\")\n",
-    "    "
+    "        print(\"-\" * 50 + \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -634,8 +640,15 @@
     "    \n",
     "    print(\"Value Counts: \\n\")\n",
     "    print(x.value_counts())\n",
-    "    print(\"-\" *50)\n"
+    "    print(\"-\" *50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -662,9 +675,15 @@
     "    \n",
     "    plt.figure(fig_num, figsize=(12, 7))\n",
     "    \n",
-    "    sns.scatterplot(x, y, data = data)\n",
-    "    "
+    "    sns.scatterplot(x, y, data = data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1643,6 +1662,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
