updated boxplot_ function in EDA to sort by median value

--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,9 +655,11 @@
     "    \n",
     "    y = data[target]\n",
     "    \n",
+    "    median_sort_list = data.groupby(column)[target].median().sort_values().index.to_list()\n",
+    "    \n",
     "    plt.figure(fig_num, figsize=(12, 7))\n",
     "    \n",
-    "    sns.boxplot(x, y, data = data)\n",
+    "    sns.boxplot(x, y, data = data, order = median_sort_list)\n",
     "    \n",
     "    print(\"Value Counts: \\n\")\n",
     "    print(x.value_counts())\n",
@@ -1747,9 +1749,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37664bitbaseconda78814975a87e45dd93a41087a924c115",
+   "name": "python3",
    "language": "python",
-   "display_name": "Python 3.7.6 64-bit ('base': conda)"
+   "display_name": "Python 3"
   },
   "language_info": {
    "codemirror_mode": {
